[gd_scene load_steps=12 format=3 uid="uid://dsrb3nvouvvrj"]

[ext_resource type="Script" path="res://Player/flare.gd" id="1_iq4wj"]
[ext_resource type="AudioStream" uid="uid://6tvwqf3cbf2r" path="res://Player/SFX/Flare/SW_Flare_Burning_LOOP_01.wav" id="3_123cu"]
[ext_resource type="Texture2D" uid="uid://dmg344m5ttil2" path="res://Player/Effect/fire/smoke_effect.png" id="3_roc2v"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mxdr3"]
cull_mode = 2
albedo_color = Color(1, 0.486275, 0, 1)
emission_enabled = true
emission = Color(1, 0.545098, 0, 1)
uv1_scale = Vector3(2, 2, 2)

[sub_resource type="SphereMesh" id="SphereMesh_78wsx"]
material = SubResource("StandardMaterial3D_mxdr3")
radius = 0.03
height = 0.06

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_xma2e"]
emission_shape = 1
emission_sphere_radius = 0.04
angular_velocity_max = 20.0
gravity = Vector3(0, 0, 0)
linear_accel_min = -0.67
linear_accel_max = 1.8
radial_accel_max = 0.1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_h6w7d"]
transparency = 1
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("3_roc2v")
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
grow_amount = 16.0

[sub_resource type="QuadMesh" id="QuadMesh_h2ufv"]
material = SubResource("StandardMaterial3D_h6w7d")
size = Vector2(0.4, 0.4)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_plmxx"]
transparency = 1
cull_mode = 2
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("3_roc2v")
billboard_mode = 1

[sub_resource type="QuadMesh" id="QuadMesh_ojgu7"]
material = SubResource("StandardMaterial3D_plmxx")
size = Vector2(0.3, 0.3)

[sub_resource type="SphereShape3D" id="SphereShape3D_y1i1j"]
radius = 0.652215

[node name="flare" type="Node3D"]
script = ExtResource("1_iq4wj")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0507747, 0)
light_color = Color(1, 0.580392, 0, 1)
light_energy = 4.0
shadow_enabled = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_78wsx")

[node name="smoke" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00597434, -0.00758596)
lifetime = 0.86
explosiveness = 0.1
randomness = 0.1
draw_order = 3
process_material = SubResource("ParticleProcessMaterial_xma2e")
draw_pass_1 = SubResource("QuadMesh_h2ufv")

[node name="smoke2" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00597434, 0.00467979)
amount = 20
lifetime = 0.86
explosiveness = 0.1
randomness = 1.0
draw_order = 3
trail_lifetime = 0.96
process_material = SubResource("ParticleProcessMaterial_xma2e")
draw_pass_1 = SubResource("QuadMesh_ojgu7")

[node name="time" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="new" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="flare_ambience" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_123cu")
autoplay = true

[node name="Area3D" type="Area3D" parent="." groups=["flare"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_y1i1j")

[connection signal="timeout" from="time" to="." method="_on_time_timeout"]
[connection signal="timeout" from="new" to="." method="_on_new_timeout"]
